Version Changes for Hypermail
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

============================
HYPERMAIL VERSION 3.0.0
============================

2023-00-00 Jose Kahan
	* src/parse.c
	parse_old_html() was not unconverting all the protected
	HTML entities (such as &ndash;) from the comments in a
	hypermail archive directory.

	* src/{printfile.c, lang.h}
	Associate title="Normal view" to the default stylesheet to take
	into account someone adding alternate css files by means
	of hypermail's configuration directives.

	* src/{parse.c, setup.c, setup.h}
	New configuration option ignore_content_disposition to be able to
	ignore the Content-Disposition header for some Mime-Types. This is
	particularly useful for old Apple Mail messages that associated
	Content-Disposition: attachment with multipart/appledouble.

	* src/parse.c
	When parse_old_html() was called with cmp_msgid to check if the first
	message in the archive corresponds to the first one that is added,
	the comparition failed if the msgid had characters that had to be
	escaped inside xml comments.

	* src/{parse.c, struct.c, struct.h}
	In complex messages where a multipart/mixed had a message/rfc822 part,
	with the later having multipart/mixed parts, parsing the message could
	fail if there were one or more missing boundary end separators.

	* src/parse.c
	If a multipart/mixed attachment had a Content-Disposition header
	that didn't give a filename, the parser wasn't checking if the
	Content-Type header had a name attribute it could use for the
	attachment file.

	* src/print.c
	Although description strings for attachments are stored in UTF-8,
	they were not being converted to the prefered charset for message
	files, which lead to invalid chars appearing in messages

	* src/print.c
	Special chars in subjects in forwarded messages were not being
	escaped

        * config.guess, config.sub
        Updated from https://git.savannah.gnu.org/gitweb/?p=config.git

	* configure.ac, configure